# eurobin

./: .gitignore  Giulia Vezzani's Talk  README.md  generalities.txt  grasp_dual_wtoclaw_laterally.py  prompt_together.txt  requirements.txt  running_instructions.txt
kyon_gazebo/: CMakeLists.txt  package.xml
kyon_gazebo/launch/: kyon_world.launch
kyon_gazebo/models/ball_model/: model.config  model.sdf
kyon_gazebo/models/book_model/: model.config  model.sdf
kyon_gazebo/models/bottle_model/: model.config  model.sdf
kyon_gazebo/models/box2_model/: model.config  model.sdf
kyon_gazebo/models/box3_model/: model.config  model.sdf
kyon_gazebo/models/box_green_model/: model.config  model.sdf
kyon_gazebo/models/box_green_model_fixed/: model.sdf
kyon_gazebo/models/box_model/: model.config  model.sdf
kyon_gazebo/models/box_red_model/: model.sdf
kyon_gazebo/models/box_red_model_fp/: model.config  model.sdf
kyon_gazebo/models/camera/: model.config  model.sdf
kyon_gazebo/models/cone_model/: model.config  model.sdf
kyon_gazebo/models/glass_model/: model.config  model.sdf
kyon_gazebo/models/laptop_model/: model.config  model.sdf
kyon_gazebo/models/pin_model/: model.config  model.sdf
kyon_gazebo/models/table2_model/: model.sdf
kyon_gazebo/models/table_model/: model.config  model.sdf
kyon_gazebo/src/: reset_initial_state.bash
kyon_gazebo/urdf/: kyon_gazebo.urdf.xacro  kyon_sensors.urdf.xacro
kyon_gazebo/worlds/: kyon_2cups.world  kyon_FP.world  kyon_ball.world  kyon_cup.world  kyon_handover.world  kyon_room_env.world  kyon_stacked.world
(+4551 files in other folders)
