<?xml version="1.0"?>
<package format="2">
  <name>kyon_gazebo</name>
  <version>0.0.0</version>
  <description>The kyon gazebo package</description>

  <maintainer email="luca.rossini@iit.it">Luca Rossini</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
